--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,4 @@
-cmake_minimum_required(VERSION 3.12)
+cmake_minimum_required(VERSION 3.13)
 project(myproject VERSION 1.0.0)
-add_executable(cmake_good main.c)
+add_executable(sjTest main.c)
+install(TARGETS sjTest DESTINATION bin)
